crates/basisu_c_sys/src/extra/snapshots/basisu_c_sys__extra__transcoder__tests__astc_skybox_xuastc_ldr_8x8_cubemap_mips.snap
---
source: crates/basisu_c_sys/src/extra/transcoder.rs
expression: image_data
extension: bin
snapshot_kind: binary
---
